# Socrates

./: ;  README.md  TODO.md  socrates.cpp  socrates.h
examples/: CMakeLists.txt  camera_example.cpp  main.cpp  test_utils.h
socrates/: socrates.h
